# toe-solver

./: .gitignore  CMakeLists.txt  README.md
src/: board.cpp  board.hpp  cell.cpp  cell.hpp  datatypes.hpp  enums.hpp  main.cpp  player.cpp  player.hpp
src/engine/: CMakeLists.txt
src/engine/components/: material.hpp  mesh.hpp  transform.hpp
src/engine/devices/: window.cpp  window.hpp
src/engine/geometry/: mesh.hpp
src/engine/graphics/: command_pool.cpp  context.cpp  graphics.cpp  graphics.hpp  material.cpp  material.hpp  pipeline.cpp  resource_manager.cpp  resource_manager.hpp  shader.cpp  shader.hpp
src/engine/renderers/: sprite_renderer.hpp
src/engine/resources/: resource_manager.cpp  resource_manager.hpp
src/engine/scenes/: game_object.cpp  game_object.hpp  locator.cpp  locator.hpp
src/solvers/: abstract.hpp  block_connections.hpp  play_close.hpp  random_move.hpp
